--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="pref_screen" translatable="false">ps</string>
     <string name="pref_screen_title_live_preview" translatable="false">Live preview settings</string>
     <string name="pref_screen_title_still_image" translatable="false">Still image settings</string>
-    <string name="pref_screen_title_camerax_live_preview" translatable="false">CameraX live preview settings</string>
+    <string name="pref_screen_title_camerax_live_preview" translatable="false">settings</string>
     <string name="pref_screen_title_cameraxsource_demo" translatable="false">CameraXSource live preview settings</string>
     <string name="pref_category_info" translatable="false">Detection Info</string>
     <string name="pref_category_face_detection" translatable="false">Face Detection</string>
