--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
     <string name="pref_key_camerax_rear_camera_target_resolution" translatable="false">crctas</string>
     <string name="pref_key_camerax_front_camera_target_resolution" translatable="false">cfctas</string>
-    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
+    <string name="pref_key_camera_live_viewport" translatable="true">clv</string>
     <string name="pref_title_rear_camera_preview_size" translatable="false">Rear camera preview size</string>
     <string name="pref_title_front_camera_preview_size" translatable="false">Front camera preview size</string>
     <string name="pref_title_camerax_rear_camera_target_resolution" translatable="false">CameraX rear camera target resolution</string>
